--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,6 +8,36 @@ body, html {
     width: 400px;
 }
 
+p{
+    color: white;
+    font-family: Shanti;
+    font-size: 1.5em;
+    margin: 20px;
+}
+
+input{
+    width: 300px;
+    height: 50px;
+    margin: 20px;
+    border: none;
+    border-radius: 10px;
+    font-family: Shanti;
+    text-align: center;
+    font-size: 1.3em;
+}
+
+#operation{
+    width: 300px;
+    height: 50px;
+    margin: 20px;
+    border: none;
+    border-radius: 10px;
+    font-family: Shanti;
+    text-align: center;
+    font-size: 1.3em;
+}
+
+
 table, td, th {
     border: 1px solid #aaa;
 }
